--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
       <footer id="footer">
   
   <div class="outer" style="text-align:center">
-   <img src="https://static.dy208.cn/o_1dfilp8ruo521thr1hvf18ji17soa.png">
-<a href="http://www.beian.miit.gov.cn/"  style="color:inherit" target="_blank">冀ICP备17017728号-1</a>
+<a href="https://beian.miit.gov.cn/"  style="color:inherit" target="_blank">冀ICP备17017728号-1</a>
   </div>
 </footer>
     </div>
